--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,6 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-#
-# If you need help with YAML syntax, here are some quick references for you:
-# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
-# https://learnxinyminutes.com/docs/yaml/
+# FILE: _config.yml
+# LAST EDIT: JJACKSON
+# SUMMARY: Site settings and variables that serve as defaults to be accessed elsewhere in the application
 #
 # Site settings
 # These are used to personalize your new site. If you look in the HTML files,
@@ -18,20 +8,21 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
+title: Links and Build
 email: jjackson0014@outlook.com
 description: >- # this means to ignore newlines until "baseurl:"
-  This blog serves as a register of my technical, personal, and professional pursuits.
-baseurl: "/JJACKSON0014/" # the subpath of your site, e.g. /blog
+  Sharing knowledge
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://jjackson0014.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 domain: jjackson0014.github.io
-twitter_username: jekyllrb
-github_username:  jekyll
+instagram_username: linksandbuild_
+github_username:  jjackson0014
 
 # Build settings
 theme: minima
 plugins:
   - jekyll-feed
+markdown: kramdown
 
 # Exclude from processing.
 # The following items will not be processed, by default.
